--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
-    "lottie-react-native": "^5.1.4",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
+    "lottie-react-native": "^5.1.4",
     "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0"
   },
