--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native-stack": "^6.9.18",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-date-picker": "^4.3.6",
+    "react-native-dropdown-picker": "^5.4.4",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0"
   },
