--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-native-date-picker": "^4.3.6",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "@react-navigation/bottom-tabs": "^6.5.5",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
