--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@react-native-firebase/app": "^18.8.0",
     "@react-native-firebase/auth": "^18.8.0",
     "@react-native-firebase/firestore": "^18.8.0",
+    "@react-native-firebase/storage": "^19.0.1",
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-date-picker": "^4.3.6",
+    "react-native-document-picker": "^9.1.1",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
