--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-native-date-picker": "^4.3.6",
     "react-native-document-picker": "^9.1.1",
     "react-native-dropdown-picker": "^5.4.4",
+    "react-native-image-picker": "^7.1.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
