--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.6.0",
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-firebase/app": "^18.8.0",
@@ -28,6 +29,7 @@
     "react-native-image-picker": "^7.1.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^9.2.0",
     "rn-fetch-blob": "^0.12.0"
   },
